@@ -1,8 +1,8 @@
 package SPVM::StringBuffer {
   use SPVM::Hash;
 
-  has value      : byte[];
-  has length      : ro int;
+  has value : byte[];
+  has length : ro int;
   
   private enum {
     DEFAULT_CAPACITY = 16,
@@ -52,20 +52,6 @@ package SPVM::StringBuffer {
     return $self;
   }
 
-  sub substr : byte[] ($self : self, $offset : int, $length : int) {
-    if ($offset >= $self->{length}) {
-      die("substr offset is greater or equal than string length");
-    }
-    
-    my $new_text = new byte[$length];
-    
-    for (my $i = 0; $i < $length; $i++) {
-      $new_text->[$i] = $self->{value}[$offset + $i];
-    }
-    
-    return $new_text;
-  }
-
   sub push  : void ($self : self, $string : string) {
     my $length = length($string);
     my $capacity = @$self->{value};
@@ -91,6 +77,24 @@ package SPVM::StringBuffer {
     }
   }
 
+  sub to_str : string ($self : self) {
+    return (string)(sliceb($self->{value}, 0, $self->{length}));
+  }
+
+  sub substr : string ($self : self, $offset : int, $length : int) {
+    if ($offset >= $self->{length}) {
+      die("substr offset is greater or equal than string length");
+    }
+    
+    my $new_text = new byte[$length];
+    
+    for (my $i = 0; $i < $length; $i++) {
+      $new_text->[$i] = $self->{value}[$offset + $i];
+    }
+    
+    return $new_text;
+  }
+
   sub index : int ($self : self, $search : string, $offset : int) {
     my $slen = length $search;
     for (my $i = $offset; $i < $self->{length} - $slen + 1; ++$i) {
@@ -106,10 +110,6 @@ package SPVM::StringBuffer {
       }
     }
     return -1;
-  }
-
-  sub to_str : string ($self : self) {
-    return (string)(sliceb($self->{value}, 0, $self->{length}));
   }
 
   sub clear : void ($self : self) {
